--- a/index.html
+++ b/index.html
@@ -116,19 +116,13 @@
                 </div>
                 <span class="tooltiptext">Subtração</span>
             </div>
-            <div class="tooltip">
-                <div class="button" onclick="calculatorControls.handlerChange('²')">
-                    x²
+            <div class="tooltip two">
+                <div class="button" onclick="calculatorControls.handlerChange('%')">
+                    %
                 </div>
-                <span class="tooltiptext">Potência</span>
+                <span class="tooltiptext">Porcento</span>
             </div>
-            <div class="tooltip">
-                <div class="button" onclick="calculatorControls.handlerChange('raiz')">
-                    &radic;
-                </div>
-                <span class="tooltiptext">Raiz Quadrada</span>
-            </div>
-            <div class="tooltip">
+            <div class="tooltip two">
                 <div class="button" onclick="calculatorControls.handlerChange('0')">
                     0
                 </div>
@@ -141,18 +135,12 @@
                 <span class="tooltiptext">Vírgula</span>
             </div>
             <div class="tooltip">
-                <div class="button" onclick="calculatorControls.handlerChange('%')">
-                    %
-                </div>
-                <span class="tooltiptext">Porcento</span>
-            </div>
-            <div class="tooltip">
                 <div class="button" onclick="calculatorControls.handlerChange('+')">
                     +
                 </div>
                 <span class="tooltiptext">Adição</span>
             </div>
-            <div class="tooltip last">
+            <div class="tooltip two">
                 <div class="button" onclick="calculatorControls.calc()">
                     =
                 </div>
